...
private const val KIND_SELECT = "select"
private const val KIND_NUMBER = "number"
private const val KIND_TEXT = "text"
private const val SLIDER_MAX_STEPS = 100L
private const val DISABLED_ALPHA = 0.5f

const val TAG_FLAGS = "set_flags"
const val TAG_FLAGS_RESTART = "set_flags_restart"
const val TAG_FLAGS_RELAUNCH = "set_flags_relaunch"
const val TAG_FLAGS_PRESET = "set_flags_preset"
const val TAG_FLAGS_PRESET_ITEM = "set_flags_preset_"
const val TAG_FLAGS_RESET_ALL = "set_flags_reset_all"
const val TAG_FLAGS_CONFIRM = "set_flags_confirm"
const val TAG_FLAGS_QUERY = "set_flags_query"
const val TAG_FLAGS_STATE = "set_flags_state"
const val TAG_FLAGS_BUG_FIXES = "set_flags_bug_fixes"
const val TAG_FLAG = "set_flag_"
const val TAG_FLAG_DOT = "set_flag_dot_"
const val TAG_FLAG_RESET = "set_flag_reset_"
const val TAG_FLAG_CONTROL = "set_flag_control_"
const val TAG_FLAG_OPTION = "set_flag_option_"
const val TAG_FLAG_DECREASE = "set_flag_decrease_"
...
